Full info now being pulled
Full space flight info:
Date, Mission name, Flight time/location, and mission description are now being pulled and stored as divs on the webpage

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-    {% for x in missionList %}
-        <p>{{ x }}</p>
+    {% for x in dateList %}
+        <div style="border: solid black 2px">
+            <P>{{ x.date, x.name }} </p>
+            <p>{{ x.lauchInfo }}</p>
+            <p>{{ x.description }}</p>
+        </div>
+
+
     {% endfor %}
+
+
+
+
 </body>
 </html>
