--- a/templates/index.html
+++ b/templates/index.html
@@ -8,33 +8,54 @@
     <link rel="icon" href="favicon.ico">
 
     <title>Starter Template for Bootstrap</title>
-
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Bungee+Shade|Gruppo|Teko" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!-- Custom styles for this template --><link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
     <style>
         body {
             padding-top: 5rem;
-            background-image: url("https://cdn.pixabay.com/photo/2016/06/05/07/59/stars-1436950_960_720.jpg");
+            background-image: url('https://i.imgur.com/FwCRSND.jpg');
         }
 
-        .starter-template {
-            padding: 3rem 1.5rem;
-            text-align: center;
-        }
+       .dateName{
+            margin-bottom: 15%;
+
+       }
+
+       #date{
+           font-family: 'Audiowide';
+           color: #a4190d;
+       }
+
+       #missionName{
+           font-family: 'Bungee Shade';
+           color: #3269a4;
+       }
 
         .mission{
-            border: solid black 2px;
+            border: black 5px solid;
+            box-shadow: 0 0 0 5px #00dcdc;
+
             border-radius: 15px 50px;
             margin: 5%;
             padding: 10px;
-            background: white;
+            background: whitesmoke;
         }
 
-        .dateName{
-            border: cadetblue solid 2px;
+        #missionDescription{
+            font-family: 'Gruppo';
+            font-size: 25px;
+
         }
+
+        #launchInformation{
+            font-family: 'Teko';
+            font-size: 25px;
+
+        }
+
     </style>
   </head>
 
@@ -44,10 +65,10 @@
 
      {% for x in dateList %}
         <div class="mission">
-            <container class="dateName">{{ x.date }} | {{ x.name }}</container>
+            <container class="dateName"><p><h3><span id ='date'>{{x.date}}</span> | <span id="missionName">{{ x.name }}</span></h3></p></container>
 
-            <p>{{ x.lauchInfo }}</p>
-            <p>{{ x.description }}</p>
+            <p id="launchInformation"><strong>{{ x.launchInfo }}</strong></p>
+            <p id = "missionDescription">{{ x.description }}</p>
         </div>
 
 
