fixed routing names
changed default title and rounting names

--- a/templates/landingPage.html
+++ b/templates/landingPage.html
@@ -52,7 +52,7 @@
                 <p class="lead">Discover upcoming missions to the Final Frontier</p>
                 <hr class="my-2">
                 <p class="lead">
-                <a class="btn btn-primary btn-lg" href="/output" role="button">Find out who is leaving Earth</a>
+                <a class="btn btn-primary btn-lg" href="/missions" role="button">Find out who is leaving Earth</a>
                 </p>
         </div>
     </div>
