--- a/templates/index.html
+++ b/templates/index.html
@@ -1,94 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="favicon.ico">
-
-    <title>Future Missions</title>
-    <link href="https://fonts.googleapis.com/css?family=Audiowide|Bungee+Shade|Gruppo|Teko" rel="stylesheet">
-    <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <!-- Custom styles for this template --><link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
-
+<head>
+    <meta charset="UTF-8">
+    <title>Who is leaving Earth?</title>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Allan|Open+Sans" rel="stylesheet">
     <style>
-        body {
-            padding-top: 5rem;
-            background-image: url('https://i.imgur.com/FwCRSND.jpg');
+
+        body, html{
+            height: 100%;
         }
+        .bg{
+            background-image: url("https://images.unsplash.com/photo-1516849841032-87cbac4d88f7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=15be9f9073988c075caa018991009b74&auto=format&fit=crop&w=1350&q=80");
+            height: 100%;
 
-       .dateName{
-            margin-bottom: 15%;
-
-       }
-
-       #date{
-           font-family: 'Audiowide';
-           color: #a4190d;
-       }
-
-       #missionName{
-           font-family: 'Bungee Shade';
-           color: #3269a4;
-       }
-
-        .mission{
-            border: black 5px solid;
-            box-shadow: 0 0 0 5px #00dcdc;
-
-            border-radius: 15px 50px;
-            margin: 5%;
-            padding: 10px;
-            background: whitesmoke;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
         }
+        .jumbotron{
 
-        #missionDescription{
-            font-family: 'Gruppo';
-            font-size: 25px;
-
+            margin-top: 10%;
+            opacity: .55;
+            position: fixed;
         }
-
-        #launchInformation{
-            font-family: 'Teko';
-            font-size: 25px;
-
+        .btn-primary{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: #3269a4;
         }
-
+        .display-3{
+            font-family: 'Allan';
+            color: deepskyblue;
+        }
+        .lead{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-family: 'Open Sans';
+        }
     </style>
-  </head>
+</head>
+<body>
 
-  <body>
-
+<div class="bg">
     <div class="container">
+        <div class="jumbotron">
 
-     {% for x in dateList %}
-        <div class="mission">
-            <container class="dateName"><p><h3><span id ='date'>{{x.date}}</span> | <span id="missionName">{{ x.name }}</span></h3></p></container>
-
-            <p id="launchInformation"><strong>{{ x.launchInfo }}</strong></p>
-            <p id = "missionDescription">{{ x.description }}</p>
+            <h1 class="display-3">Who is leaving Earth?</h1>
+                <p class="lead">Discover upcoming missions to the Final Frontier</p>
+                <hr class="my-2">
+                <p class="lead">
+                <a class="btn btn-primary btn-lg" href="/missions" role="button">Find out who is leaving Earth</a>
+                </p>
         </div>
-
-
-    {% endfor %}
-
-
-
-    </div><!-- /.container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="https://maxcdn.bootstrapcdn.com/js/ie10-viewport-bug-workaround.js"></script>
-    <!-- Holder.js for placeholder images -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.4/holder.min.js"></script>
-  </body>
+    </div>
+</div>
+</body>
 </html>
