--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,9 @@
                 <p class="lead">
                 <a class="btn btn-primary btn-lg" href="/missions" role="button">Find out who is leaving Earth</a>
                 </p>
+                <p>
+                    <a class="btn btn-primary btn-lg" href="/peopleInSpace" role="button">See who is in space</a>
+                </p>
         </div>
     </div>
 </div>
