Astronaut page updated
Wikipedia summaries and phots now on astronauts currently in space page

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,10 +52,13 @@
                 <p class="lead">Discover upcoming missions to the Final Frontier</p>
                 <hr class="my-2">
                 <p class="lead">
-                <a class="btn btn-primary btn-lg" href="/missions" role="button">Find out who is leaving Earth</a>
+                    <a class="btn btn-primary btn-lg" href="/missions" role="button">See upcoming missions to space</a>
+                </p>
+                <p class="lead">
+                    <a class="btn btn-primary btn-lg" href="/peopleInSpace" role="button">See who is currently in space</a>
                 </p>
                 <p>
-                    <a class="btn btn-primary btn-lg" href="/peopleInSpace" role="button">See who is in space</a>
+
                 </p>
         </div>
     </div>
